--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" media="print" href="print.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kyoshi Beauty</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- <div id="app-root"></div> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
