--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link rel="stylesheet" media="print" href="print.css" /> -->
+    <!-- <link rel="stylesheet" type = "text/css" media = "print" href="./src/PrintStruk.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kyoshi Beauty</title>
   </head>
